...
              'Menú',
              style: TextStyle(fontSize: 24, fontWeight: FontWeight.bold),
            ),
          ),
          _buildNavItem(0, Icons.local_shipping, 'Pedidos'),
          _buildNavItem(1, Icons.person, 'Conductores'),
          _buildNavItem(2, Icons.route, 'Rutas'),
          _buildNavItem(3, Icons.track_changes, 'Tracking'),
        ],
      ),
    );
  }

...
